src/screens/Account/src/Components/WalletBalance/_walletbalance.scss
/* ... */
.random-reward {
  color: #fff;
  font-size: 18px;
  font-style: normal;
  font-weight: 500;
  line-height: normal;
}

.ready-border {
  width: 96px;
  height: 40px;
  animation: pulsate 1.5s ease-out infinite;
}
.ready-border-2 {
  width: 96px;
  height: 40px;
  filter: drop-shadow(0px 0px 10px rgba(202, 64, 22, 0.6));
}

@keyframes pulsate {
  0% {
    filter: drop-shadow(0px 0px 0px rgba(125, 217, 175, 0.6));
  }
  50% {
    filter: drop-shadow(0px 0px 15px rgba(125, 217, 175, 0.6));
  }
  100% {
    filter: drop-shadow(0px 0px 0px rgba(125, 217, 175, 0.6));
  }
}
.ready-to-claim {
  color: #f7f7fc;
  text-align: center;
  font-size: 10px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  position: absolute;
  top: 28%;
  right: 0;
  left: 0;
  bottom: 0;
  height: fit-content;
  z-index: 2;
}

.timer-text {
  color: #f7f7fc;
  font-size: 10px;
  font-style: normal;
  font-weight: 700;
  line-height: 8px;
  position: relative;
  // left: 20px;
}

.headericon {
  position: absolute;
  right: 0px;
  bottom: 10px;
}

.game-events-img {
  position: absolute;
  right: 0;
  bottom: 0;
  width: 80%;
  @media screen and (max-width: 991px) {
    width: auto;
  }
}

.profile-div-desc {
  color: #f7f7fc;
  font-size: 10px;
  font-style: normal;
  font-weight: 300;
  line-height: normal;
  width: 50%;
}

.profile-staking-img {
  position: absolute;
  bottom: 25%;
  right: -5%;
  width: 70%;
  @media screen and (max-width: 991px) {
    width: auto;
    bottom: 10%;
  }
}

.rewards-div {
  border-radius: 10px;
  background: rgba(5, 3, 3, 0.3);
}

.event-popup-grid {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  gap: 10px;
  margin-bottom: 30px;
  @media screen and (max-width: 500px) {
    grid-template-columns: repeat(3, 1fr);
  }
}

.event-popup-item {
  // width: 20% !important;
  border-radius: 10px;
  border: 1px solid #8e97cd;
  background: rgba(23, 25, 50, 0.4);
  box-shadow: 0px 0px 8px 0px rgba(142, 151, 205, 0.15);
  cursor: pointer;
  transition: all 0.25s;
  h6 {
    color: #fff;
    font-size: 12px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
  }

  @media screen and (max-width: 500px) {
    h6 {
      font-size: 9px;
    }
  }
}

@media screen and (max-width: 500px) {
  .popup-events-container {
    flex-wrap: wrap;
  }
}

.event-popup-item-2 {
  min-height: 90px;
  border-radius: 10px;
  border: 1px solid #8e97cd;
  background: rgba(23, 25, 50, 0.4);
  box-shadow: 0px 0px 8px 0px rgba(142, 151, 205, 0.15);
  p {
    color: #fff;
    font-size: 12px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
  }
}

.event-popup-item:hover {
  border: 1px solid #7dd9af;
}

.selected-popup-item {
  border: 1px solid #7dd9af !important;
}

@media screen and (max-width: 786px) {
  .nft-wrapper-popup {
    max-height: 80%;
    overflow-y: scroll;
  }
}

